<resources>
    <string name="app_name">keyboard</string>
    <string name="english">EN</string>
    <string name="chinese">中文</string>
    <string name="handwritten">手写</string>
    <string name="keyboard">键盘</string>
    <string name="enter">\u21B5</string>
    <string name="space">▂</string>
    <string name="quotes_left">\"</string>
    <string name="quotes_right">\"</string>
    <string name="shift">\u2191</string>
    <string name="a">a</string>
    <string name="b">b</string>
    <string name="c">c</string>
    <string name="d">d</string>
    <string name="add">+</string>
    <string name="e">e</string>
    <string name="f">f</string>
    <string name="g">g</string>
    <string name="slashes">/</string>
    <string name="delele">←</string>
    <string name="h">h</string>
    <string name="i">i</string>
    <string name="j">j</string>
    <string name="k">k</string>
    <string name="reduce">-</string>
    <string name="l">l</string>
    <string name="m">m</string>
    <string name="n">n</string>
    <string name="semicolon">;</string>
    <string name="o">o</string>
    <string name="p">p</string>
    <string name="q">q</string>
    <string name="r">r</string>
    <string name="s">s</string>
    <string name="t">t</string>
    <string name="comma">,</string>
    <string name="u">u</string>
    <string name="v">v</string>
    <string name="w">w</string>
    <string name="flower_left">{</string>
    <string name="flower_right">}</string>
    <string name="x">x</string>
    <string name="y">y</string>
    <string name="z">z</string>
    <string name="period">.</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_0">0</string>
</resources>
